# open-witness

./: .darcs-boring  .gitignore  .travis.yml  Exception.hs  LICENSE  Makefile  Object.hs  Unsafe.hs  changelog.md  open-witness.cabal  package.yaml  stack.yaml
Data/: OpenWitness.hs
Data/OpenWitness/: Dynamic.hs  Exception.hs  OpenDict.hs  OpenRep.hs  ST.hs  Typeable.hs  WitnessDict.hs
Data/OpenWitness/Typeable/: Rep.hs
Data/Type/: Heterogeneous.hs
src/Data/: OpenWitness.hs
src/Data/OpenWitness/: Dynamic.hs  Exception.hs  Instance.hs  Order.hs  ST.hs  TypeRep.hs  Typeable.hs  Witnessed.hs
src/Data/Type/: Heterogeneous.hs  OpenWitness.hs
src/Data/Type/OpenWitness/: Dynamic.hs  Exception.hs  Instance.hs  Order.hs  ST.hs  TypeRep.hs  Typeable.hs  Witnessed.hs
test/: Main.hs  Makefile  Object.hs  test-open-witness.cabal
